# ckl2ckl

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/ckl2ckl/: translate.py
